# tauri-plugin-tcpclient

./: Cargo.toml  README.md  build.rs  package.json
examples/tauri-app/: package.json
examples/tauri-app/src/: App.svelte
examples/tauri-app/src-tauri/: Cargo.toml
examples/tauri-app/src-tauri/capabilities/: default.json
examples/tauri-app/src-tauri/src/: lib.rs
guest-js/: index.ts
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: connect_with_bind.toml  is_connected.toml
permissions/schemas/: schema.json
src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs
