[package]
name = "tauri-plugin-tcpclient"
version = "0.1.0"
authors = ["x93008"]
description = "A Tauri plugin for TCP client connections"
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-tcpclient"
license = "MIT"
repository = "https://github.com/x93008/tauri-plugin-tcpclient"
keywords = ["tauri", "tcp", "client", "network", "plugin"]

[dependencies]
tauri = { version = "2.10.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2"
tokio = { version = "1", features = ["net", "io-util", "sync", "rt-multi-thread", "macros", "time"] }
socket2 = { version = "0.5", features = ["all"] }

[build-dependencies]
tauri-plugin = { version = "2.5.3", features = ["build"] }
